--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -494,7 +494,7 @@ footer {
 #item-filters ul {
     @include de-list;
     text-align: center;
-    margin-bottom: 0;
+    margin: 0;
 
     li {
         display: inline-block;
@@ -668,7 +668,7 @@ footer {
 
 #search-results {
     width: 100%;
-    margin: 0;
+    margin: rhythm() 0 0;
 }
 
 #search-results img {
